@@ -271,6 +271,10 @@ proc run_srec_test { test objs } {
 	set flags "$flags -no-relax"
     }
 
+    if [istarget powerpc64*-*-*] {
+	set flags "$flags --no-toc-optimize"
+    }
+
     if { ![ld_simple_link $ld tmpdir/sr1 "$flags $objs"] \
 	 || ![ld_simple_link $ld tmpdir/sr2.sr "$flags --oformat srec $objs"] } {
 	fail $test
